Added a new controller
